--- a/src/styles/Index.css
+++ b/src/styles/Index.css
@@ -2,9 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Josefin Sans', sans-serif;
 }
 html, body{
     height: 100vh;
     width: 100vw;
     overflow: none;
+    background: url('../assets/Bg.png');
 }
